solc_mutator_ossfuzz_seed_corpus/test_sol/test_8cf7290e2de509c74445b303fc3445e48ec0e94f5ecd49a4e40c0c3545455f77_978bc1107df3b8a6dc398f4185d056024d9974a1_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0() internal    returns(string memory o0,bytes7 o1)
  {
  }
  using L0 for *;
  function f1() private   
  {
  }
  function f2() internal    returns(function (uint112, int184, bool) external   returns (uint176, uint168) o0)
  {
  }
  function f3(bytes memory i0) public    returns(bool o0)
  {
  }
  using L0 for *;
  error er0(int96 ep0, address payable ep1);
}
pragma solidity >= 0.0.0;
using L0 for uint;

==== Source: su1.sol ====
library L1 {
  function f4(string memory i0,address payable i1) internal    returns(int120 o0)
  {
  }
  function f5(address payable i0) public   
  {
  }
  event ev0(function (address) external   returns (bytes14, int8, address)  ep0, int240  ep1);
  event ev1(function (int8, address payable, function () internal   returns (string memory)) internal   returns (bytes16, bytes17, uint144)  ep0, address payable  ep1);
  modifier m0() 
  {
    _;
  }
  using L1 for *;
  event ev2(bool[]  ep0);
}
struct St0 {
  bytes4 el0;
  bytes el1;
  bytes31 el2;
}
pragma solidity >= 0.0.0;
using L1 for uint;
using L1 for uint;
using L1 for uint;
// ----
// TypeError 3417: (su1.sol:262-394): Internal or recursive type is not allowed as event parameter type.
